docs/minio/minio-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: flowi
spec:
  selector:
    matchLabels:
      app: minio
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
      - image: minio/minio
        name: minio
        command: [ "minio", "server" ]
        args: [ "/data" , "--console-address", ":9001" ]
        ports:
        - containerPort: 9000
          name: minio
        volumeMounts:
        - name: minio-persistent-storage
          mountPath: /data
      volumes:
      - name: minio-persistent-storage
        persistentVolumeClaim:
          claimName: minio-pv-claim
