docs/minio/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: flowi
spec:
  selector:
    app: minio
  ports:
    - protocol: TCP
      name: api
      port: 80
      targetPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: minio-console
  namespace: flowi
spec:
  selector:
    app: minio
  ports:
    - protocol: TCP
      name: console
      port: 80
      targetPort: 9001
