docs/minio/minio-service.yml
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  namespace: flowi
spec:
  selector:
    app: minio
  ports:
    - protocol: TCP
      name: api
      port: 80
      targetPort: 9000
    - protocol: TCP
      name: console
      port: 9001
      targetPort: 9001
